# Simple-OpenGL-Image-Library

./: CMakeLists.txt  SOILConfig.cmake
src/: SOIL.c  image_DXT.c  stb_image_aug.c
